grammar.js
    source_file: $ => repeat(
      choice(
        $.psql_statement,
        seq($._statement, ";")
      ),
    ),

    _statement: $ => choice(
      $.psql_statement,
      $.create_function_statement,
      $.drop_function_statement,
      $.create_table_statement,
      $.create_schema_statement,
      $.create_type_statement,
      $.select_statement,
      $.insert_statement,
      $.delete_statement,
      $.update_statement,
      $.grant_statement,
      $.create_trigger_statement,
      $.create_sequence_statement,
      $.create_index_statement,
      $.alter_table_statement,
      $.do_block,
    ),

    update_statement: $ => seq(
      optional($.with_query),
      kw("update"), $.identifier, optional(seq(optional(kw("as")), $.identifier)),
      kw("set"), commaSep1($.update_set),
      optional(seq(kw("from"), commaSep1($.from_item))),
      optional($.where_filter),
      optional($.returning),
    ),

    _with_query_statement: $ => choice(
      $.select_statement,
      $.insert_statement,
      $.delete_statement,
      $.update_statement,
    ),

    insert_statement: $ => seq(
      optional($.with_query),
      kw("insert"), kw("into"), $.identifier, optional($.as),
      optional($._list_of_identifiers),
      $.insert_items, optional($.insert_conflict),
      optional($.returning),
      optional($.into),
    ),
    insert_items: $ => choice(
      seq(kw("default"), kw("values")),
      seq(kw("values"), "(", commaSep($.insert_item), ")"),
      $.select_statement
    ),
    insert_item: $ => choice(
      kw("default"),
      $._value_expression,
    ),
    update_set: $ => choice(
      seq($.identifier, "=", $.update_value),
      seq($._list_of_identifiers, "=", optional(kw("row")), "(", commaSep1($.update_value), ")"),
    ),
    update_value: $ => choice(kw("default"), $._value_expression),
    returning: $ => seq(kw("returning"), commaSep1($.select_item)),

    delete_statement: $ => seq(
      optional($.with_query),
      kw("delete"), kw("from"), $.identifier, optional(kw("as")), optional($.identifier),
      optional($.delete_using),
      optional($.where_filter),
      optional(seq(kw("returning"), commaSep1($.select_item))),
      optional($.into),
    ),

    select_statement: $ => prec.left(seq(
      optional($.with_query),
      kw("select"),
      commaSep($.select_item),
      optional($.into),
      optional($.select_from),
      optional($.select_where),
      optional($.select_group_by),
      optional($.select_having),
      optional($.select_order_by),
      optional($._select_limit_offset),
      optional($.into),
    )),

    with_query: $ => seq(kw("with"), commaSep1($.with_query_item)),
    with_query_item: $ => seq(
      $.identifier,
      optional($._list_of_identifiers),
      kw("as"),
      optional(choice(kw("materialized"), seq(kw("not"), kw("materialized")))),
      "(", $._with_query_statement, ")"
    ),
    into: $ => seq(kw("into"), optional(kw("strict")), commaSep1($.identifier)),
    select_having: $ => seq(kw("having"), $._value_expression),
    _select_limit_offset: $ => choice(
      seq($.select_limit, optional($.select_offset)),
      seq($.select_offset, optional($.select_limit)),
    ),
    select_limit: $ => seq(
      kw("limit"),
      choice(
        kw("all"),
        $._value_expression
      )
    ),
    select_offset: $ => seq(
      kw("offset"), $._value_expression,
      optional(choice(kw("row"), kw("rows")))
    ),
    // TODO(chrde): rollup, cube, grouping sets
    select_group_by: $ => prec(1, seq(kw("group"), kw("by"),
      choice(
        seq("(", commaSep1($._value_expression), ")"),
        commaSep1($._value_expression),
      ),
    )),
    select_order_by: $ => seq(kw("order"), kw("by"), commaSep1($.order_by_item)),
    order_by_item: $ => seq($._value_expression, optional($.order_by_direction)),
    order_by_direction: $ => choice(kw("asc"), kw("desc")),
    select_where: $ => $.where_filter,
    select_item: $ => seq(
      $._value_expression,
      optional(kw("as")),
      optional($.identifier)
    ),
    select_from: $ => seq(kw("from"), commaSep1($.from_item)),
    from_item: $ => prec.left(seq(
      // TODO(chrde): https://www.postgresql.org/docs/current/sql-select.html
      choice(
        $.from_select,
        $.from_table,
        $.from_function,
      ),
      repeat($.join_item),
    )),
    from_select: $ => seq("(", $.select_statement, ")", optional(kw("as")), $.identifier),
    from_table: $ => seq($.identifier, optional(kw("as")), optional($.identifier)),
    from_function: $ => seq(
      $.function_call,
      optional(choice(
        seq(kw("as"), $.identifier, optional($._list_of_identifiers)),
        seq($.identifier, optional($._list_of_identifiers)),
        seq(kw("as"), $._list_of_identifiers),
      )),
    ),

    where_filter: $ => seq(kw("where"), $._value_expression),
    _type: $ => seq(
      choice($.predefined_types, $.identifier),
      optional(choice(
        repeat1(seq("[", "]")),
        kw("%rowtype"),
        kw("%type")))
    ),

// predefined_type:
//   | BIGINT { BigInt }
//   | BIT VARYING? l = type_length? { BitVarying(l) }
//   | BOOLEAN { Boolean }
//   | CHAR VARYING? l = type_length? { Char(l) }
//   | CHARACTER VARYING? l = type_length? { Char(l) }
//   | DEC p = precision_param? { Dec(p) }
//   | DECIMAL p = precision_param? { Decimal(p) }
//   | DOUBLE PRECISION { Double }
//   | FLOAT p = precision_param? { Float(p) }
//   | INT { Int }
//   | INTEGER { Integer }
//   | INTERVAL interval = interval_field? l = type_length? { Interval(interval, l) }
//   | NCHAR VARYING? l = type_length? { Nchar(l) }
//   | NUMERIC p = precision_param? { Numeric(p) }
//   | REAL { Real }
//   | SMALLINT { SmallInt }
//   | TEXT { Text }
//   (* | TIME l = type_length? (1* NOTE(chrde): what here? *1) *)
//   | TIME l = type_length? WITH TIME ZONE { TimeTz(l) }
//   | TIME l = type_length? WITHOUT TIME ZONE { Time(l) }
//   (* | TIMESTAMP l = type_length? (1* NOTE(chrde): what here? *1) *)
//   | TIMESTAMP l = type_length? WITH TIME ZONE { TimestampTz(l) }
//   | TIMESTAMPTZ l = type_length? { TimestampTz(l) }
//   | TIMESTAMP l = type_length? WITHOUT TIME ZONE { Timestamp(l) }
//   | VARCHAR l = type_length? { VarChar(l) }
//   (* | schema_qualified_name_nontype (LEFT_PAREN vex (COMMA vex)* RIGHT_PAREN)? *)
    // TODO(chrde): moar types!!
    string: $ => seq(
      "'",
      repeat(choice(
        prec(1, /''/),
        prec(2, /[^']/),
      )),
       "'",
    ),

    // NOTE(chrde): taken from https://github.com/tree-sitter/tree-sitter-javascript/blob/1ddbf1588c353edab37791cdcc9f17e56fb4ea73/grammar.js#L899
    _value_expression: $ => choice(
      $.number,
      $.dollar_quote_string,
      $.string,
      $.true,
      $.false,
      $.null,
      $.star,
      seq("(", $.select_statement, ")"),
      seq("(", commaSep1($._value_expression), ")"),
      $.function_call,
      $.array_constructor,
      $.op_expression,
      $.time_expression,
      // TODO(chrde): this one feels a bit hacky? perhaps move to identifier regexp
      seq($.identifier, ".", $.star),
      $.identifier,
    ),

    function_call: $ => seq(
      $.identifier,
      "(",
      choice(
        $.select_statement,
        commaSep($._value_expression),
      ),
      ")"
    ),

    op_expression: $ => choice(
      prec.left(12, seq($._value_expression, $.cast, $._type)),
      // array access
      prec.right(10, seq(choice($.minus, $.plus), $._value_expression)),
      // ^
      prec.left(8, seq($._value_expression, choice("*", "/", "%"), $._value_expression,)),
      prec.left(7, seq($._value_expression, choice("-", "+"), $._value_expression,)),
      prec.left(6, seq($._value_expression, $.other_op, $._value_expression)),
      prec.left(5, seq($._value_expression, $.contains_op, $._value_expression,)),
      prec.left(4, seq($._value_expression, $.comparison_op, $._value_expression,)),
      prec.left(3, seq($._value_expression, $.comparison_kw, $._value_expression,)),
      prec.left(3, seq($._value_expression, $.comparison_null)),
      prec.right(2, seq($.not, $._value_expression)),
      prec.left(1, seq($._value_expression, choice($.and, $.or), $._value_expression,)),
    ),

    _list_of_identifiers: $ => seq("(", commaSep($.identifier), ")"),

    // TODO(chrde): https://www.postgresql.org/docs/13/sql-syntax-lexical.html
    comparison_op: $ => choice("<", ">", "=", "<=", ">=", "<>", "!="),
    // TODO(chrde): is there a better name other than `contains_op`?
    true: $ => kw("true"),
    star: $ => "*",
    number: $ => /-?\d+/,
    identifier: $ => $._identifier,
    _identifier: $ => /[a-zA-Z0-9_]+(\.?[a-zA-Z0-9_]+)*/,
    //                                ^
    //                                |- we dont want to match consecutive dots, e.g: 1..2 consists of 3 tokens
  }
});
